--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,5 +1,5 @@
-DATABASE_URL=enter-your-production-database-url-here
-DATABASE_URL_DEVELOPMENT=enter-your-development-database-url-here
-DATABASE_URL_TEST=enter-your-test-database-url-here
-DATABASE_URL_PREVIEW=enter-your-preview-database-url-here
+DATABASE_URL=postgres://mmnjmtju:A_w-uZLdz2uQcTmqy4WMwlZf3zEgDb7U@hansken.db.elephantsql.com/mmnjmtju
+DATABASE_URL_DEVELOPMENT=postgres://dlpbtyif:3l2h4BNJ8xQeB2GyUPSP5jX9Uw-y3wmH@hansken.db.elephantsql.com/dlpbtyif
+DATABASE_URL_TEST=epostgres://hqmrjjdd:BJvMgdwevcw3hmT5t8YYzdUoa1iuHdW3@hansken.db.elephantsql.com/hqmrjjdd
+DATABASE_URL_PREVIEW=postgres://zqsccetz:dXIZTjCR3SWsR8f80yEKjcSlyv2O0Q2l@hansken.db.elephantsql.com/zqsccetz
 LOG_LEVEL=info
